--- a/idioms/rustdoc-init.html
+++ b/idioms/rustdoc-init.html
@@ -215,7 +215,7 @@ impl Connection {
     /// # Example
     /// ```
     /// # fn call_send(connection: Connection, request: Request) {
-    /// let response = connection.send_request();
+    /// let response = connection.send_request(request);
     /// assert!(response.is_ok());
     /// # }
     /// ```
