--- a/print.html
+++ b/print.html
@@ -183,6 +183,12 @@
 You can break them, but if you do you should have a good reason for it.</p>
 <p>TODO: Mention why Rust is a bit special - functional elements, type system, borrow checker</p>
 <h1><a class="header" href="#contributing" id="contributing">Contributing</a></h1>
+<h2><a class="header" href="#introduction-1" id="introduction-1">Introduction</a></h2>
+<p>This book is a catalogue of Rust programming techniques, (anti-)patterns, idioms and other explanations.
+It is a compilation of collective (sometimes implicit) knowledge as well as experiences that have emerged through collaborative work.</p>
+<p>The patterns described here are <strong>not rules</strong>, but should be taken as guidelines for writing idiomatic code in Rust.
+We are collecting Rust patterns in this book so people can learn the tradeoffs between Rust idioms and use them properly in their own code.</p>
+<p>If you want to be part of this effort here are some ways you can participate:</p>
 <h2><a class="header" href="#discussion-board" id="discussion-board">Discussion board</a></h2>
 <p>If you have a question or an idea regarding certain content but you want to have feedback of fellow community members
 and you think it may not be appropriate to file an issue open a discussion in our <a href="https://github.com/rust-unofficial/patterns/discussions">discussion board</a>.</p>
