--- a/print.html
+++ b/print.html
@@ -1343,10 +1343,13 @@ let f = fb.build();
 </code></pre>
 <p>as well as the <code>FooBuilder::new().a().b().build()</code> style.</p>
 <h2><a class="header" href="#see-also-8" id="see-also-8">See also</a></h2>
-<p><a href="https://doc.rust-lang.org/1.0.0/style/ownership/builders.html">Description in the style guide</a></p>
-<p><a href="https://crates.io/crates/derive_builder">derive_builder</a>, a crate for automatically implementing this pattern while avoiding the boilerplate.</p>
-<p><a href="patterns/../idioms/ctor.html">Constructor pattern</a> for when construction is simpler.</p>
-<p><a href="https://en.wikipedia.org/wiki/Builder_pattern">Builder pattern (wikipedia)</a></p>
+<ul>
+<li><a href="https://web.archive.org/web/20210104103100/https://doc.rust-lang.org/1.12.0/style/ownership/builders.html">Description in the style guide</a></li>
+<li><a href="https://crates.io/crates/derive_builder">derive_builder</a>, a crate for automatically implementing this pattern while avoiding the boilerplate.</li>
+<li><a href="patterns/../idioms/ctor.html">Constructor pattern</a> for when construction is simpler.</li>
+<li><a href="https://en.wikipedia.org/wiki/Builder_pattern">Builder pattern (wikipedia)</a></li>
+<li><a href="https://web.archive.org/web/20210104103000/https://rust-lang.github.io/api-guidelines/type-safety.html#c-builder">Builders enable construction of complex values (C-BUILDER)</a> from the Rust API guidelines</li>
+</ul>
 <h1><a class="header" href="#compose-structs-together-for-better-borrowing" id="compose-structs-together-for-better-borrowing">Compose structs together for better borrowing</a></h1>
 <p>TODO - this is not a very snappy name</p>
 <h2><a class="header" href="#description-17" id="description-17">Description</a></h2>
