deploy: dfd74a86d14e480c7f1b909a496714f1280a5ade

--- a/print.html
+++ b/print.html
@@ -2421,7 +2421,13 @@ println!(&quot;{}&quot;, sum);
 <p>A collection of complementary helpful content</p>
 <h2><a class="header" href="#talks" id="talks">Talks</a></h2>
 <ul>
-<li><a href="https://www.youtube.com/watch?v=Pm_oO0N5B9k">Design Patterns in Rust</a> by Nick Cameron at the PDRust (2016)</li>
+<li><a href="https://www.youtube.com/watch?v=Pm_oO0N5B9k">Design Patterns in Rust</a> by Nicholas Cameron at the PDRust (2016)</li>
+<li><a href="https://www.youtube.com/watch?v=0zOg8_B71gE">Writing Idiomatic Libraries in Rust</a> by Pascal Hertleif at RustFest (2017)</li>
+<li><a href="https://www.youtube.com/watch?v=vqavdUGKeb4">Rust Programming Techniques</a> by Nicholas Cameron at LinuxConfAu (2018)</li>
+</ul>
+<h2><a class="header" href="#books-online" id="books-online">Books (Online)</a></h2>
+<ul>
+<li><a href="https://rust-lang.github.io/api-guidelines">The Rust API Guidelines</a></li>
 </ul>
 
                     </main>
