deploy: 66f79d5dddc2c4d043e25d6247e8c0afb2508669

--- a/print.html
+++ b/print.html
@@ -217,7 +217,7 @@ Early reviews of the community are not meant as an offense but to give feedback.
 <p>Before submitting the PR launch the commands <code>mdbook build</code> to make sure that the book builds and <code>mdbook test</code> to make sure that
 code examples are correct.</p>
 <h3><a class="header" href="#important-note" id="important-note">Important Note</a></h3>
-<p>Please <strong>don't force push</strong> your branch to keep commit history and make it easier of us to see changes between reviews.</p>
+<p>Please <strong>don't force push</strong> commits in your branch, in order to keep commit history and make it easier for us to see changes between reviews.</p>
 <p>Make sure to <code>Allow edits of maintainers</code> (under the text box) in the PR so people can actually collaborate on things or fix smaller issues themselves.</p>
 <h1><a class="header" href="#idioms" id="idioms">Idioms</a></h1>
 <p><a href="https://en.wikipedia.org/wiki/Programming_idiom">Idioms</a> are commonly used styles and patterns largely agreed upon by a community. They are guidelines. Writing idiomatic code allows other developers to understand what is happening because they are familiar with the form that it has.</p>
