--- a/CONTRIBUTING.html
+++ b/CONTRIBUTING.html
@@ -202,7 +202,7 @@ Early reviews of the community are not meant as an offense but to give feedback.
 <p>Before submitting the PR launch the commands <code>mdbook build</code> to make sure that the book builds and <code>mdbook test</code> to make sure that
 code examples are correct.</p>
 <h3><a class="header" href="#important-note" id="important-note">Important Note</a></h3>
-<p>Please <strong>don't force push</strong> your branch to keep commit history and make it easier of us to see changes between reviews.</p>
+<p>Please <strong>don't force push</strong> commits in your branch, in order to keep commit history and make it easier for us to see changes between reviews.</p>
 <p>Make sure to <code>Allow edits of maintainers</code> (under the text box) in the PR so people can actually collaborate on things or fix smaller issues themselves.</p>
 
                     </main>
