deploy: d6f98eaa6eea762ba72655817de14f0aaa8201f9

--- a/CONTRIBUTING.html
+++ b/CONTRIBUTING.html
@@ -178,9 +178,12 @@ We are collecting Rust patterns in this book so people can learn the tradeoffs b
 <p>If you have a question or an idea regarding certain content but you want to have feedback of fellow community members
 and you think it may not be appropriate to file an issue open a discussion in our <a href="https://github.com/rust-unofficial/patterns/discussions">discussion board</a>.</p>
 <h2><a class="header" href="#writing-a-new-article" id="writing-a-new-article">Writing a new article</a></h2>
-<p>Before writing a new article please check our <a href="https://github.com/rust-unofficial/patterns/issues">issues</a> and
-the <a href="https://github.com/rust-unofficial/patterns/pulls">Pull Requests</a> if there are existing issues or someone
-is working on that topic.</p>
+<p>Before writing a new article please check in one of the following resources if there is an existing discussion or if someone is already working on that topic:</p>
+<ul>
+<li><a href="https://github.com/rust-unofficial/patterns/issues/116">Umbrella issue</a>,</li>
+<li><a href="https://github.com/rust-unofficial/patterns/issues">All issues</a>,</li>
+<li><a href="https://github.com/rust-unofficial/patterns/pulls">Pull Requests</a></li>
+</ul>
 <p>If you don't find an issue regarding your topic and you are sure it is not more feasible to open a thread in the <a href="https://github.com/rust-unofficial/patterns/discussions">discussion board</a>
 please open a new issue, so we can discuss about the ideas and future content of the article together and maybe
 give some feedback/input on it.</p>
